html de pagina principal

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
+      <nav>
+        <ul>
+          <li><a href="#AtletasOlimpicos">MIRA MAS DE ATLETAS</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="AtletasOlimpicos">
+      <h1>ATLETAS OLIMPICOS</h1>
+      <table>
+       <thead>
+         <tr>Nombre </tr>
+         <tr>Deporte</tr>
+       </thead>
+       <tbody>
+         <tr>
+           <td>Rafael Nadal</td>
+           <td>Tennis</td>
+         </tr>
+       </tbody>
+      </table>
+    </section>
+    <footer>
+      <p>© Derechos Reservados</p>
+    </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
