inplementacion de css

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
-      <nav>
+      <nav class="navegador">
         <ul>
           <li><a href="#AtletasOlimpicos">MIRA MAS DE ATLETAS</a></li>
         </ul>
@@ -18,8 +18,8 @@
       <h1>ATLETAS OLIMPICOS</h1>
       <table>
        <thead>
-         <tr>Nombre </tr>
-         <tr>Deporte</tr>
+         <th colspan="2">Nombre </th>
+         <th colspan="2">Olimpiada</th>
        </thead>
        <tbody>
          <tr>
