usand clases css

--- a/src/index.html
+++ b/src/index.html
@@ -16,21 +16,25 @@
     </header>
     <section id="AtletasOlimpicos">
       <h1>ATLETAS OLIMPICOS</h1>
+      <div class="table-content">
       <table>
        <thead>
-         <th colspan="2">Nombre </th>
-         <th colspan="2">Olimpiada</th>
+         <th>Nombre </th>
+ <!--    <th>Olimpiada</th>-->
        </thead>
        <tbody>
          <tr>
-           <td>Rafael Nadal</td>
-           <td>Tennis</td>
+           <td></td>
+           <td></td>
          </tr>
        </tbody>
       </table>
+    </div>
     </section>
     <footer>
-      <p>© Derechos Reservados</p>
+      <p>© Derecho
+        
+        s Reservados</p>
     </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
