--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
       <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
       <nav class="navegador">
         <ul>
-          <li><a href="#AtletasOlimpicos">MIRA MAS DE ATLETAS</a></li>
+          <li><a href="#miraMasDeAtletas">MIRA MAS DE ATLETAS</a></li>
         </ul>
       </nav>
     </header>
-    <section id="AtletasOlimpicos">
+    <section id="miraMasDeAtletas">
       <h1>ATLETAS OLIMPICOS</h1>
       <div class="table-content">
       <table>
@@ -32,9 +32,7 @@
     </div>
     </section>
     <footer>
-      <p>© Derecho
-        
-        s Reservados</p>
+      <p>© Derechos Reservados</p>
     </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
