--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
        </thead>
        <tbody>
          <tr>
-           <td></td>
+           <td id="aqui"></td>
            <td></td>
          </tr>
        </tbody>
