--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,66 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <h1>INFORMACIÓN DEL ATLETA</h1>
+    <div class="table-container">
+      <table class="table-profile">
+        <tr>
+          <th>Nombre:</th>
+          <td>Gladys Lucy Tejada Pucuhuaranga</td>
+        </tr>
+        <tr>
+          <th>Genero:</th>
+          <td>Femenino</td>
+        </tr>
+        <tr>
+          <th>Estatura:</th>
+          <td>1.56m</td>
+        </tr>
+        <tr>
+          <th>Peso:</th>
+          <td>47kg.</td>
+        </tr>
+        <tr>
+          <th>Años:</th>
+          <td>35 años</td>
+        </tr>
+        <tr>
+          <th>Deporte:</th>
+          <td>Atletismo</td>
+        </tr>
+        <tr>
+          <th>Nacionalidad:</th>
+          <td>Peruana</td>
+        </tr>
+      </table>
+      <table class="table-detail">
+        <tr>
+          <th>Olimpiada</th>
+          <th>Disciplina</th>
+          <th>Temporada</th>
+          <th>Medallas</th>
+        </tr>
+        <tr>
+          <td>Sidney 2000</td>
+          <td>Atletismo</td>
+          <td>Verano</td>
+          <td>10</td>
+        </tr>
+      </table>
+    </div>
+    <div id="content">
+
+    </div>
+    <div id= "atletasData">
+
+    </div>
+    <div id= "atletasOlympic">
+
+    </div>
+
+    <input id="btnMostrar" type="button" value="Mostrar todo">
+
     <script src="main.js" type="module"></script>
   </body>
 </html>
