--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,7 @@
         </ul>
       </nav>
     </header>
-    <section id="miraMasDeAtletas">
-      <h1>ATLETAS OLIMPICOS</h1>
-      <div class="table-content">
-      <table>
-       <thead>
-         <th>Nombre </th>
- <!--    <th>Olimpiada</th>-->
-       </thead>
-       <tbody>
-         <tr>
-           <td id="aqui"></td>
-           <td></td>
-         </tr>
-       </tbody>
-      </table>
-    </div>
+    <section id="byName">
     </section>
     <footer>
       <p>© Derechos Reservados</p>
