--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
     </footer>
     <div id="root"></div>
 
-    <h1>INFORMACIÓN DEL ATLETA</h1>
-    <div class="table-container">
+    <div id="table-container" class="hideWindow">
+      <h1>INFORMACIÓN DEL ATLETA</h1>
       <table class="table-profile">
         <tr>
           <th>Nombre:</th>
@@ -68,18 +68,6 @@
         </tr>
       </table>
     </div>
-    <div id="content">
-
-    </div>
-    <div id= "atletasData">
-
-    </div>
-    <div id= "atletasOlympic">
-
-    </div>
-
-    <input id="btnMostrar" type="button" value="Mostrar todo">
-
     <script src="main.js" type="module"></script>
   </body>
 </html>
