correcion de stilos

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
       <nav class="navegador">
         <ul>
-          <li><a href="#miraMasDeAtletas">MIRA MAS DE ATLETAS</a></li>
+          <li><a href="#byName">MIRA MAS DE ATLETAS</a></li>
         </ul>
       </nav>
     </header>
