codigo sincronisado con Sandra

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,11 @@
     </header>
     <section id="byName">
     </section>
-    <footer>
-      <p>© Derechos Reservados</p>
-    </footer>
+
     <div id="root"></div>
 
-    <h1>INFORMACIÓN DEL ATLETA</h1>
-    <div class="table-container">
+    <div id="table-container" class="hideWindow">
+      <h1>INFORMACIÓN DEL ATLETA</h1>
       <table class="table-profile">
         <tr>
           <th>Nombre:</th>
@@ -68,18 +66,9 @@
         </tr>
       </table>
     </div>
-    <div id="content">
-
-    </div>
-    <div id= "atletasData">
-
-    </div>
-    <div id= "atletasOlympic">
-
-    </div>
-
-    <input id="btnMostrar" type="button" value="Mostrar todo">
-
-    <script src="main.js" type="module"></script>
+  <script src="main.js" type="module"></script>
   </body>
+  <footer>
+    <p>© Derechos Reservados</p>
+  </footer> 
 </html>
