--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -10,13 +11,26 @@
       <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
       <nav class="navegador">
         <ul>
-          <li><a href="#byName">MIRA MAS DE ATLETAS</a></li>
+          <li><a href="#byName"  id="btnByName">MIRA MAS DE ATLETAS</a></li>
+          <li><a>Conoce mas de Deportes</a></li>
         </ul>
       </nav>
     </header>
-    <section id="byName">
+    <div id="containerMain" class="negro hideData">
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+    </div>
+    <section id="byName" class="appearance hideData ">
     </section>
-
+    <div id="dVerMas" class="centrado hideData" >
+      <button id="btnVerMas"><strong>VER MAS ATLETAS</strong></button>
+    </div>
     <div id="root"></div>
 
     <div id="table-container" class="hideWindow">
