--- a/src/index.html
+++ b/src/index.html
@@ -8,31 +8,76 @@
   </head>
   <body>
     <header>
-      <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
+      <div class="logoContainer">
+        <img src="/img/olympic_rings_PNG13.png"  class="logoImg"  alt="">
+        <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
+        <img src="/img/olympic_rings_PNG13.png"  class="logoImg" alt="">
       <nav class="navegador">
         <ul>
           <li><a href="#byName"  id="btnByName">MIRA MAS DE ATLETAS</a></li>
-          <li><a>Conoce mas de Deportes</a></li>
+          <li><a href="#Deportes">CONOCE MAS DE DEPORTES</a></li>
         </ul>
       </nav>
+      </div>
     </header>
-    <div id="containerMain" class="negro hideData">
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
-      <p>jkdaksjflkjdflkdjsflkdjfhlkdjfhdl</p>
+    <main class="content">
+    <div id="containerMain" class="hideData">
+      <div id="buscador"></div>
+      <div class="medallasLogo">
+        <h1 class="title">¿CUÁLES SON LOS DEPORTISTAS CON MÁS MEDALLAS?</h1>
+        <img class="rioLogo" src="/img/rio2016.jpeg" alt="">
+      </div>
+      <div class="topMedallistas">
+        <figure class="relieve">
+          <img src="/img/uno.jpeg" alt="Olimpiada">
+          <figcaption>Matteo Bisiani</figcaption>
+          <figcaption>Esqui</figcaption>
+        </figure>
+        <figure class="relieve">
+          <img src="/img/dos.jpeg" alt="">
+          <figcaption>Nataliya Andrivna Burdeina</figcaption>
+          <figcaption>Gimnasia</figcaption>
+        </figure>
+        <figure class="relieve">
+          <img src="/img/tres.jpeg" alt="">
+          <figcaption>Ilario Di Bu Atletisma</figcaption>
+          <figcaption>Atletisma</figcaption>
+        </figure>
+        <figure class="relieve">
+          <img src="/img/cuatro.jpeg" alt="">
+          <figcaption>Simon John Fairweather</figcaption>
+          <figcaption>Tenis</figcaption>
+        </figure>
+      </div>
+    <div class="Deportes">
+      <h1 class="title" >DEPORTES</h1>
+      <div class="topMedallistas">
+        <figure class="relieve">
+          <img src="/img/karatee.jpeg" alt="">
+          <figcaption>Karete</figcaption>          
+        </figure>
+        <figure class="relieve">
+          <img src="/img/swimmingUno.jpeg" alt="">
+          <figcaption>Natacion</figcaption>
+        </figure>
+        <figure class="relieve">
+          <img src="/img/esquee.jpeg" alt="">
+          <figcaption>Esqui</figcaption>
+        </figure>
+        <figure class="relieve">
+          <img src="/img/cycling.jpeg" alt="">
+          <figcaption>Ciclismo</figcaption>
+        </figure>
+      </div>
     </div>
+  </div>
+</main>
     <section id="byName" class="appearance hideData ">
     </section>
-    <div id="dVerMas" class="centrado hideData" >
+    <!-- <div id="dVerMas" class="centrado hideData" >
       <button id="btnVerMas"><strong>VER MAS ATLETAS</strong></button>
-    </div>
+    </div> -->
     <div id="root"></div>
-
     <div id="table-container" class="hideWindow">
       <h1>INFORMACIÓN DEL ATLETA</h1>
       <table class="table-profile">
