--- a/src/index.html
+++ b/src/index.html
@@ -129,4 +129,8 @@
       </table>
     </div>
   <script src="main.js" type="module"></script>
-
+  </body>
+  <footer>
+    <p>©️ Derechos Reservados</p>
+  </footer>
+</html>
