test function filter

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
   <body>
     <header>
       <div class="logoContainer">
-        <img src="/img/olympic_rings_PNG13.png"  class="logoImg"  alt="">
-        <h1>JUEGOS OLIMPICOS SIGLO XXI</h1>
-        <img src="/img/olympic_rings_PNG13.png"  class="logoImg" alt="">
+        <img src="/img/olympic_rings_PNG13.png" id="logoLeftClick" class="logoImg"  alt="">
+        <h1 id="h1Click">JUEGOS OLIMPICOS SIGLO XXI</h1>
+        <img src="/img/olympic_rings_PNG13.png" id="logoRightClick" class="logoImg" alt="">
       <nav class="navegador">
         <ul>
           <li><a href="#byName"  id="btnByName">MIRA MAS DE ATLETAS</a></li>
-          <li><a href="#Deportes">CONOCE MAS DE DEPORTES</a></li>
+          <li><a href="#Deportes" id="btnDeportes">CONOCE MAS DE DEPORTES</a></li>
         </ul>
       </nav>
       </div>
@@ -81,7 +81,7 @@
     <div id="root"></div>
 
 
-    <div id="table-container" class="hideWindow">
+    <div id="table-container" class="hideData">
       <h1>INFORMACIÓN DEL ATLETA</h1>
       <table class="table-profile">
         <tr>
