--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,15 @@
         <img src="/img/olympic_rings_PNG13.png" id="logoRightClick" class="logoImg" alt="">
       <nav class="navegador">
         <ul>
-          <li><a href="#byName"  id="btnByName">MIRA MAS DE ATLETAS</a></li>
-          <li><a href="#Deportes" id="btnDeportes">CONOCE MAS DE DEPORTES</a></li>
+          <li>
+            <a href="#byName" class="anchor"  id="btnByName" >MIRA MAS DE ATLETAS</a>
+          </li>
+          <li id="btnDeportes" class="anchor">CONOCE MAS DE DEPORTES</li>
+            <ul class="DropMenuD">
+              <li><a href="#TemporadaInvierno" id="winter" class="dropdown-content">INVIERNO</a></li>
+              <li><a href="#TemporadaVerano" id="summer" class="dropdown-content">VERANO</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
       </div>
@@ -54,7 +61,7 @@
       <div class="topMedallistas">
         <figure class="relieve">
           <img src="/img/karatee.jpeg" alt="">
-          <figcaption>Karete</figcaption>          
+          <figcaption>Taekwondo</figcaption>          
         </figure>
         <figure class="relieve">
           <img src="/img/swimmingUno.jpeg" alt="">
@@ -127,6 +134,29 @@
           <td>10</td>
         </tr>
       </table>
+    </div>
+    <div>
+      <section id="TemporadaInvierno" class="hideData">
+        <h1 class="title">DEPORTES DE INVIERNO</h1>
+        <div id="btnSort" class="button">A-Z</div>
+        <!-- <div id="contenidoInvierno" class="depotesdiv"></div> -->
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur 
+          adipisicing elit. Obcaecati distinctio tempora
+          similique animi, asperiores est id facilis 
+          eveniet nam quisquam nulla. Consectetur velit
+          minus cum maiores iusto debitis odio 
+          exercitationem.</p>   -->
+      </section>
+      <section id="TemporadaVerano" class="hideData">
+        <h1 class="title">DEPORTES DE VERANO</h1>
+        <div id="btnSort" class="button">A-Z</div>
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur 
+          adipisicing elit. Obcaecati distinctio tempora
+          similique animi, asperiores est id facilis 
+          eveniet nam quisquam nulla. Consectetur velit
+          minus cum maiores iusto debitis odio 
+          exercitationem.</p>  -->
+      </section>
     </div>
   <script src="main.js" type="module"></script>
   </body>
