modificaciones de menu

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,12 @@
             <a href="#byName" class="anchor"  id="btnByName" >MIRA MAS DE ATLETAS</a>
           </li>
           <li id="btnDeportes" class="anchor">CONOCE MAS DE DEPORTES</li>
-            <ul class="DropMenuD">
+          <div class="DropMenuD">
+            <ul>
               <li><a href="#TemporadaInvierno" id="winter" class="dropdown-content">INVIERNO</a></li>
               <li><a href="#TemporadaVerano" id="summer" class="dropdown-content">VERANO</a></li>
             </ul>
+          </div>
           </li>
         </ul>
       </nav>
